make text color for text on wrmc top 30 page to fix color contrast issue

--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -88,6 +88,7 @@ $blue-lighter: #e5f1fa !default;
 
 $wrmc-blue-light: #a3e6ff !default;
 $wrmc-pink: #ee6cb9 !default;
+$wrmc-pink-darker: #de1b90 !default;
 $wrmc-green: #a7c504 !default;
 
 $sky: #0573cd;
